# plainsong

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  db.hpp  player.cpp  player.hpp  router.cpp  router.hpp
src/main/: plainsong.cpp  plainsong.hpp
web/: CMakeLists.txt  index.html  index.js
